Atualizando o crud de tarefas e corrigindo bugs de auth.