@@ -2,19 +2,21 @@ package com.todolist.todolist.infrastructure.in.controllers;
 
 import com.todolist.todolist.infrastructure.configuration.JwtUtils;
 import com.todolist.todolist.infrastructure.configuration.UserDetailsImpl;
+import com.todolist.todolist.infrastructure.dto.LoginRequest;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import jakarta.validation.Valid;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.ResponseCookie;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.Map;
 import java.util.stream.Collectors;
 
 @CrossOrigin(origins = "*", maxAge = 3600)
@@ -22,8 +24,8 @@ import java.util.stream.Collectors;
 @RequestMapping("/autenticacao")
 public class AuthController {
 
-    private AuthenticationManager authenticationManager;
-    private JwtUtils jwtUtils;
+    private final AuthenticationManager authenticationManager;
+    private final JwtUtils jwtUtils;
 
     public AuthController(AuthenticationManager authenticationManager, JwtUtils jwtUtils) {
         this.authenticationManager = authenticationManager;
@@ -31,10 +33,9 @@ public class AuthController {
     }
 
     @PostMapping("/login")
-    public ResponseEntity<?> login(@RequestBody Map<String, String> loginRequest) {
+    public ResponseEntity<?> login(@Valid @RequestBody LoginRequest loginRequest) {
         Authentication authentication = authenticationManager
-                .authenticate(new UsernamePasswordAuthenticationToken(loginRequest.get("email"),
-                        loginRequest.get("senha")));
+                .authenticate(new UsernamePasswordAuthenticationToken(loginRequest.email(), loginRequest.senha()));
 
         SecurityContextHolder.getContext().setAuthentication(authentication);
 
@@ -43,8 +44,8 @@ public class AuthController {
         ResponseCookie jwtCookie = jwtUtils.gerarJWTCookie(userDetails);
 
         List<String> roles = userDetails.getAuthorities().stream()
-                .map(item -> item.getAuthority())
-                .collect(Collectors.toList());
+                .map(GrantedAuthority::getAuthority)
+                .toList();
 
         return ResponseEntity.ok().header(HttpHeaders.SET_COOKIE, jwtCookie.toString()).build();
     }
